<resources>
    <string name="app_name">RegisterSimulator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype">Retype</string>
    <string name="birthdate">Birth Date</string>
    <string name="select">Select</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hobbies">Hobbies</string>
    <string name="tennis">Tennis</string>
    <string name="futbal">Futbal</string>
    <string name="others">Others</string>
    <string name="reset">Reset</string>
    <string name="sign_up">Sign up</string>
    <string name="secondary_header_text">Your information registered</string>
    <string name="exitBtnTxt">Exit</string>
</resources>